--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         function createGokuImage() {
             const gokou = document.createElement('img');
             gokou.id = 'gokou';
-            gokou.src = "images/Gokou.png" alt="Image">
+            gokou.src = "images/Gokou.PNG" alt="Image">
             gokou.alt = 'Gokou on Nimbus Cloud';
             
             gokou.onload = function() {
