--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         function createGokuImage() {
             const gokou = document.createElement('img');
             gokou.id = 'gokou';
-            gokou.src = "images/Gokou.PNG";
+            gokou.src = 'Gokou.PNG'; // Ensure this path is correct
             gokou.alt = 'Gokou on Nimbus Cloud';
             
             gokou.onload = function() {
