--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h1>Autobots</h1>
     <div class="buy-me-coffee">
         <a href="https://www.buymeacoffee.com/musikalangw" target="_blank">
-            <img src="Coffee.png" alt="Buy Rod a Coffee" style="height: 51px !important;width: 217px !important;">
+            <img src="Coffee.PNG" alt="Buy Rod a Coffee" style="height: 51px !important;width: 217px !important;">
         </a>
     </div>
 
