--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         function createGokuImage() {
             const gokou = document.createElement('img');
             gokou.id = 'gokou';
-            gokou.src = 'gokou.png'; // Ensure this path is correct
+            gokou.src = 'Gokou.PNG'; // Ensure this path is correct
             gokou.alt = 'Gokou on Nimbus Cloud';
             
             gokou.onload = function() {
